Closed Bug 121654 Opened 23 years ago Closed 23 years ago

Browser hangs when viewing a Ja message w/o MIME header with folder charset set to Arabic (IBM-864)

Categories

(MailNews Core :: Internationalization, defect)

All
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: ji, Assigned: smontagu)

Details

(Keywords: hang, intl, regression)

Attachments

(2 files, 1 obsolete file)

*****Observed with windows 01/22 and linux 01/23 build****

When folder charset is set to Arabic(IBM-864), the 1st one on the folder charset
list, selecting a Ja message w/o MIME header causes browser hang.

Steps to reproduce:
1. Launch Mail.
2. Set the folder charset to Arabic (IBM-864)
3. Select a Ja message w/o MIME header (I'll attach the testing mail later),
browser hangs.
Nominating for nsbeta1, since it's a regression and hang problem.
Xianglan, is your folder an IMAP or POP? I can not reproduce it with an imap
folder..
It's an IMAP folder. Did you use the testing mail? I noticed that among the
testing mails I have, this only happens to this mail and another mail which both
of them all have non-MIME encoded senders and recipients. And it doesn't happen
to other languages too, like Chinese.
yes, i can reproduce the hang if i copy this mail to my local folder, and only
with this type, i have messages with nomime in the body or in headers and they
do not hang... wierd. 
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
nsbeta1+ per bug triage .
smontagu , please talk to ji about this. 
Assignee: nhotta → smontagu
Status: ASSIGNED → NEW
Keywords: nsbeta1nsbeta1+
Does this bug still occur? I haven't succeeded in reproducing it, and it is
conceivably a dupe of bug 123380.
It still hangs with 02/25 comm. build on my system.
Odd. I see the hang in Mozilla milestone 0.9.8, but not in a Mozilla trunk build
from this morning.
I don't see the hang in my own comm. build either
I think I have pinned this down. This is the case which I said that I couldn't
find in http://bugzilla.mozilla.org/show_bug.cgi?id=82347#c16 
Attached patch Fix (obsolete) — Splinter Review
mkaply, could you review the patch?
Comment on attachment 72170 [details] [diff] [review]
Fix

r=mkaply
Attachment #72170 - Flags: review+
Comment on attachment 72170 [details] [diff] [review]
Fix

sr=kin@netscape.com

Do you want to indent the define's continuation lines like they do for the
other defines?
Attachment #72170 - Flags: superreview+
Attachment #72170 - Attachment is obsolete: true
Attachment #72462 - Flags: superreview+
Attachment #72462 - Flags: review+
Comment on attachment 72462 [details] [diff] [review]
Changed alignment per comment 15

a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #72462 - Flags: approval+
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified as fixed with 03/20 builds.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: