Fix for bug 121654, "Browser hangs when viewing a Ja message w/o MIME header with folder charset set to Arabic (IBM-864)". r=mkaply, sr=kin, a=asa